--- a/src/UserList/UserList.scss
+++ b/src/UserList/UserList.scss
@@ -95,3 +95,10 @@ h2 {
   font-size: 1.1em;
   color: #444;
 }
+
+.summary1 {
+  margin-top: 20px;
+  text-align: center;
+  font-size: 1.1em;
+  color: #444;
+}
